--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>For Mariyam ❤️</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&family=Great+Vibes&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -12,73 +13,71 @@
   <iframe width="0" height="0" src="https://www.youtube.com/embed/VnKANqDpGF0?autoplay=1&loop=1&playlist=VnKANqDpGF0" frameborder="0" allow="autoplay"></iframe>
 
   <!-- Sections -->
-  <section>
-    <img class="bg-img" src="images/photo1.jpg">
-    <div class="overlay"></div>
-    <div class="quote typewriter">Mariyam ❤️ This is for you</div>
-  </section>
+  <div class="container">
+    <section>
+      <img class="bg-img" src="images/photo1.jpg">
+      <div class="overlay"></div>
+      <div class="quote font1">Mariyam ❤️ This is for you</div>
+    </section>
 
-  <section>
-    <img class="bg-img" src="images/photo2.jpg">
-    <div class="overlay"></div>
-    <div class="card"><img src="images/photo2.jpg"></div>
-    <div class="quote typewriter" style="position:absolute; top:10%; left:5%;">Every love story is beautiful, but ours is my favorite.</div>
-  </section>
+    <section>
+      <img class="bg-img" src="images/photo2.jpg">
+      <div class="overlay"></div>
+      <div class="quote font2">Every love story is beautiful, but ours is my favorite.</div>
+    </section>
 
-  <section>
-    <img class="bg-img" src="images/photo3.jpg">
-    <div class="overlay"></div>
-    <div class="card"><img src="images/photo3.jpg"></div>
-    <div class="quote typewriter" style="position:absolute; bottom:15%; right:5%;">You are my today and all of my tomorrows.</div>
-  </section>
+    <section>
+      <img class="bg-img" src="images/photo3.jpg">
+      <div class="overlay"></div>
+      <div class="quote font3">You are my today and all of my tomorrows.</div>
+    </section>
 
-  <section>
-    <img class="bg-img" src="images/photo4.jpg">
-    <div class="overlay"></div>
-    <div class="card"><img src="images/photo4.jpg"></div>
-    <div class="quote typewriter" style="position:absolute; top:20%; right:5%;">I fall in love with you more every single day.</div>
-  </section>
+    <section>
+      <img class="bg-img" src="images/photo4.jpg">
+      <div class="overlay"></div>
+      <div class="quote font1">I fall in love with you more every single day.</div>
+    </section>
 
-  <section>
-    <img class="bg-img" src="images/photo5.jpg">
-    <div class="overlay"></div>
-    <div class="card"><img src="images/photo5.jpg"></div>
-    <div class="quote typewriter" style="position:absolute; bottom:10%; left:5%;">When I see you, I see my whole world.</div>
-  </section>
+    <section>
+      <img class="bg-img" src="images/photo5.jpg">
+      <div class="overlay"></div>
+      <div class="quote font2">When I see you, I see my whole world.</div>
+    </section>
 
-  <section>
-    <img class="bg-img" src="images/photo6.jpg">
-    <div class="overlay"></div>
-    <div class="card"><img src="images/photo6.jpg"></div>
-    <div class="quote typewriter" style="position:absolute; top:15%; left:5%;">My favorite place is inside your hug.</div>
-  </section>
+    <section>
+      <img class="bg-img" src="images/photo6.jpg">
+      <div class="overlay"></div>
+      <div class="quote font3">My favorite place is inside your hug.</div>
+    </section>
 
-  <section>
-    <img class="bg-img" src="images/photo7.jpg">
-    <div class="overlay"></div>
-    <div class="card"><img src="images/photo7.jpg"></div>
-    <div class="quote typewriter" style="position:absolute; bottom:20%; right:5%;">You’re not just my love, you’re my reason to live.</div>
-  </section>
+    <section>
+      <img class="bg-img" src="images/photo7.jpg">
+      <div class="overlay"></div>
+      <div class="quote font1">You’re not just my love, you’re my reason to live.</div>
+    </section>
 
-  <section>
-    <img class="bg-img" src="images/photo8.jpg">
-    <div class="overlay"></div>
-    <div class="card"><img src="images/photo8.jpg"></div>
-    <div class="quote typewriter" style="position:absolute; top:25%; right:10%;">With you, forever doesn’t feel long enough.</div>
-  </section>
+    <section>
+      <img class="bg-img" src="images/photo8.jpg">
+      <div class="overlay"></div>
+      <div class="quote font2">With you, forever doesn’t feel long enough.</div>
+    </section>
 
-  <section>
-    <img class="bg-img" src="images/photo9.jpg">
-    <div class="overlay"></div>
-    <div class="card"><img src="images/photo9.jpg"></div>
-    <div class="quote typewriter" style="position:absolute; bottom:25%; left:10%;">You are the poem my heart keeps writing.</div>
-  </section>
+    <section>
+      <img class="bg-img" src="images/photo9.jpg">
+      <div class="overlay"></div>
+      <div class="quote font3">You are the poem my heart keeps writing.</div>
+    </section>
 
-  <section>
-    <img class="bg-img" src="images/photo10.jpg">
-    <div class="overlay"></div>
-    <div class="final">I Love You Mariyam ❤️</div>
-  </section>
+    <section class="final-section">
+      <img class="bg-img" src="images/photo10.jpg">
+      <div class="overlay"></div>
+      <div class="final-quote">💖 You are my soul, my heartbeat, my forever Mariyam 💖</div>
+      <div class="footer">Made with ❤️ by Amaan Khan</div>
+    </section>
+  </div>
+
+  <!-- Floating hearts and images -->
+  <div class="floating-container"></div>
 
   <script src="script.js"></script>
 </body>
