--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
 
   <!-- Background Music -->
-  <iframe width="0" height="0" src="https://www.youtube.com/embed/VnKANqDpGF0?autoplay=1&loop=1&playlist=VnKANqDpGF0" frameborder="0" allow="autoplay"></iframe>
-
+<audio autoplay loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
   <!-- Sections -->
   <div class="container">
     <section>
