--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&family=Great+Vibes&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Tap to Start Screen -->
+<div id="start-screen">
+  <h1>💖 Tap to Begin 💖</h1>
+  <p>Made with ❤️ by Amaan Khan</p>
+</div>
+
+<!-- Background Music -->
+<audio id="bg-music" loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
 
   <!-- Background Music -->
 <audio autoplay loop>
