--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 <body>
   <!-- Tap to Start Screen -->
 <div id="start-screen">
+  <!-- Tap to Start Screen -->
+<div id="start-screen">
   <h1>💖 Tap to Begin 💖</h1>
   <p>Made with ❤️ by Amaan Khan</p>
 </div>
 
 <!-- Background Music -->
-<audio id="bg-music" loop>
-  <source src="music.mp3" type="audio/mpeg">
-</audio>
-
-  <!-- Background Music -->
-<audio autoplay loop>
-  <source src="music.mp3" type="audio/mpeg">
-</audio>
+<div id="music-container" style="display:none;">
+  <iframe id="yt-music" width="0" height="0" 
+    src="https://www.youtube.com/embed/VnKANqDpGF0?autoplay=1&loop=1&playlist=VnKANqDpGF0"
+    frameborder="0" allow="autoplay"></iframe>
+</div>
   <!-- Sections -->
   <div class="container">
     <section>
