--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 </head>
 <body>
 
+  <!-- Tap to Start Screen -->
+  <div id="start-screen">
+    <h1>💖 Tap to Begin 💖</h1>
+    <p>Made with ❤️ by Amaan Khan</p>
+  </div>
+
   <!-- Background Music -->
-  <div id="music-container">
+  <div id="music-container" style="display:none;">
     <iframe id="yt-music" width="0" height="0"
       src="https://www.youtube.com/embed/VnKANqDpGF0?autoplay=1&loop=1&playlist=VnKANqDpGF0"
       frameborder="0" allow="autoplay"></iframe>
   </div>
 
+  <!-- Sections -->
   <div class="container">
     <section style="--bg:url('images/photo1.jpg')">
       <div class="quote font1" data-text="Mariyam ❤️ This is for you"></div>
