--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <!-- Tap to Start Screen -->
+  <!-- Tap to Start -->
   <div id="start-screen">
     <h1>💖 Tap to Begin 💖</h1>
     <p>Made with ❤️ by Amaan Khan</p>
@@ -25,37 +25,49 @@
   <!-- Sections -->
   <div class="container">
     <section style="--bg:url('images/photo1.jpg')">
-      <div class="quote font1" data-text="Mariyam ❤️ This is for you"></div>
+      <div class="quote font1" data-text="Mariyam ❤️ You are the light of my soul."></div>
     </section>
     <section style="--bg:url('images/photo2.jpg')">
-      <div class="quote font2" data-text="Every love story is beautiful, but ours is my favorite."></div>
+      <div class="quote font2" data-text="Your smile is my favorite sunrise."></div>
     </section>
     <section style="--bg:url('images/photo3.jpg')">
-      <div class="quote font3" data-text="You are my today and all of my tomorrows."></div>
+      <div class="quote font3" data-text="With you, every moment feels like magic."></div>
     </section>
     <section style="--bg:url('images/photo4.jpg')">
-      <div class="quote font1" data-text="I fall in love with you more every single day."></div>
+      <div class="quote font1" data-text="My heart beats your name, Mariyam."></div>
     </section>
     <section style="--bg:url('images/photo5.jpg')">
-      <div class="quote font2" data-text="When I see you, I see my whole world."></div>
+      <div class="quote font2" data-text="You are my dream and my forever."></div>
     </section>
     <section style="--bg:url('images/photo6.jpg')">
-      <div class="quote font3" data-text="My favorite place is inside your hug."></div>
+      <div class="quote font3" data-text="If love had a face, it would be you."></div>
     </section>
     <section style="--bg:url('images/photo7.jpg')">
-      <div class="quote font1" data-text="You’re not just my love, you’re my reason to live."></div>
+      <div class="quote font1" data-text="Every heartbeat says 'I love you, Mariyam'."></div>
     </section>
     <section style="--bg:url('images/photo8.jpg')">
-      <div class="quote font2" data-text="With you, forever doesn’t feel long enough."></div>
+      <div class="quote font2" data-text="You are not just my love, you are my everything."></div>
     </section>
     <section style="--bg:url('images/photo9.jpg')">
-      <div class="quote font3" data-text="You are the poem my heart keeps writing."></div>
+      <div class="quote font3" data-text="With you, forever feels too short."></div>
     </section>
     <section class="final" style="--bg:url('images/photo10.jpg')">
-      <div class="final-quote" data-text="💖 You are my soul, my heartbeat, my forever Mariyam 💖"></div>
+      <div class="final-quote" data-text="💖 Mariyam, you are my heart, my soul, my forever 💖"></div>
       <div class="footer">Made with ❤️ by Amaan Khan</div>
     </section>
   </div>
+
+  <!-- Floating Frames -->
+  <div class="floating-frames">
+    <img src="images/photo1.jpg" class="float-img">
+    <img src="images/photo2.jpg" class="float-img">
+    <img src="images/photo3.jpg" class="float-img">
+    <img src="images/photo4.jpg" class="float-img">
+    <img src="images/photo5.jpg" class="float-img">
+  </div>
+
+  <!-- Floating Hearts -->
+  <div id="hearts-container"></div>
 
   <script src="script.js"></script>
 </body>
