--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Background Music -->
   <div id="music-container" style="display:none;">
     <iframe id="yt-music" width="0" height="0"
-      src="https://www.youtube.com/embed/VnKANqDpGF0?autoplay=1&loop=1&playlist=VnKANqDpGF0"
+      src="https://youtube.com/embed/Hm2tcBE6xTk?autoplay=1&loop=1&playlist=VnKANqDpGF0"
       frameborder="0" allow="autoplay"></iframe>
   </div>
 
